# danasaham-erp

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  generate_userlist.sh  pytest.ini  requirements.dev.txt  requirements.txt  ruff_check.txt  tree.txt
backend/: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  automating_improvement_regex_pattern.md  conftest.py  docker-compose.yml  env-test.toml  generate_password.py  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  run-local.sh  tree.txt
backend/.github/workflows/: check.yml
backend/app/: __init__.py
backend/app/app/: settings.py  urls.py
backend/app/common/: routers.py
backend/app/config/: __init__.py  application.py  auth.py  axes.py  base.py  cache.py  celery.py  database.py  email.py  jwt.py  logging.py  redis.py  rest.py  rest_auth.pyrest.py  security.py  sentry.py  settings.py  silk.py  spectacular.py  storage.py  tests.py
backend/app/config/__app_template__/: admin.py-tpl  apps.py-tpl  models.py-tpl  serializers.py-tpl  urls.py-tpl  views.py-tpl
backend/app/config/core/: admin.py  apps.py  models.py
backend/app/config/documents/: apps.py  serializers.py  signals.py  urls.py  views.py
backend/app/config/dsb_user_corporate/: apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/app/config/dsb_user_personal/: apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/app/config/dsb_user_publisher/: apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/app/config/dttotDoc/: apps.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/app/config/dttotDocReport/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/app/config/dttotDocReportCorporate/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/app/config/dttotDocReportPersonal/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/app/config/dttotDocReportPublisher/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/app/config/log_tracker_corporate/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/app/config/log_tracker_personal/: apps.py  serializers.py  tasks.py  urls.py  views.py
backend/app/config/log_tracker_publisher/: apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/app/config/user/: apps.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/app/core/: admin.py  apps.py  emailbackends.py  models.py  redisclient.py
backend/app/core/migrations/: 0001_initial.py  0002_alter_dttotdoc_document.py  0002_auto_20240213_0915.py  0003_alter_dttotdoc_document.py  0003_auto_20240215_1005.py  0004_auto_20240216_0444.py  0004_auto_20240417_0046.py  0005_auto_20240218_1519.py  0006_auto_20240219_0644.py  0007_auto_20240222_0146.py  0008_alter_user_totp_secret_key.py  0009_auto_20240223_0218.py  0010_rename__totp_secret_key_user_totp_secret_key.py  0011_alter_user_user_id.py  0012_alter_user_username.py  0013_userprofile.py  0014_dttotdoc.py  0015_auto_20240301_0756.py  0016_auto_20240304_0912.py  0017_auto_20240304_0931.py  0018_alter_dttotdoc_dttot_id.py  0019_auto_20240304_1007.py  0020_alter_dttotdoc_dttot_domicile_postal_code.py  0021_auto_20240305_0432.py  0022_alter_dttotdoc_input_by.py  0023_auto_20240307_0701.py  0024_alter_user_email.py  0025_alter_user_email.py  0026_alter_userprofile_last_name.py  0027_document.py  0028_document_document_file_type.py  0029_dttotdoc__dttot_middle_name.py
backend/app/core/tests/: test_admin.py  test_models.py
backend/app/documents/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/app/documents/dttotDoc/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/app/documents/tests/: test_document_api.py
backend/app/documents/utils/: data_preparation.py
backend/app/dsb_user/: apps.py
backend/app/dsb_user/dsb_user_corporate/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dsb_user/dsb_user_personal/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dsb_user/dsb_user_publisher/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dsb_user_corporate/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dsb_user_corporate/utils/: utils.py
backend/app/dsb_user_personal/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dsb_user_personal/tests/: test_dsb_user_personal.py
backend/app/dsb_user_personal/utils/: dsb_user_personal.sql  utils.py
backend/app/dsb_user_publisher/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dsb_user_publisher/utils/: penebit_ecf_dttot_check_ver1.sql  utils.py
backend/app/dttotDoc/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/app/dttotDoc/tests/: test_dttotDoc_api.py
backend/app/dttotDocReport/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dttotDocReport/utils/: utils.py
backend/app/dttotDocReportCorporate/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dttotDocReportCorporate/utils/: utils.py
backend/app/dttotDocReportPersonal/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dttotDocReportPersonal/utils/: utils.py
backend/app/dttotDocReportPublisher/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/dttotDocReportPublisher/utils/: utils.py
backend/app/user/: admin.py  apps.py  logging.py  middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/app/user/tests/: test_user_api.py  test_views.py
backend/app/user/user_digital_sign/: apps.py  (+1 more)
backend/app/web/: asgi.py  urls.py  wsgi.py
backend/pgbouncer/: pgbouncer.ini
backend/redis/: redis.conf
backend/tasks/: __init__.py  app.py
(+122 files in other folders)
